# AdventOfCode2023

./: adventOfChocolate.py  pyproject.toml
adventofcode2023/: day1.py  day10.py  day11.py  day12.py  day13.py  day14.py  day2.py  day3.py  day4.py  day5.py  day6.py  day7_part1.py  day7_part2.py  day8.py  day9.py
adventofcode2023/inputs/: day8_test.txt
