[tool.poetry]
name = "adventofcode2023"
version = "0.1.0"
description = ""
authors = ["Luis Escobar Sawa <6599003+LeJawa@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
